k8s/media-stack/base/apps/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: media
spec:
  selector:
    app: vaultwarden
  ports:
    - port: 80
      targetPort: 80
